adjust paths for js

--- a/action-clusters/index.html
+++ b/action-clusters/index.html
@@ -65,11 +65,11 @@
 <link href="https://pages.nist.gov/GCTC/css/jquery.dataTables.yadcf.css" rel="stylesheet">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="https://pages.nist.gov/GCTC/js/tabletop.js"></script>
-<script src="https://pages.nist.gov/GCTC/js/handlebars-v4.0.5.js"></script>
-<script src="https://pages.nist.gov/GCTC/js/underscore.js"></script>
-<script src="https://pages.nist.gov/GCTC/js/jquery.dataTables.min.js"></script>
-<script src="https://pages.nist.gov/GCTC/js/jquery.dataTables.yadcf.js"></script>
+<script src="/GCTC/js/tabletop.js"></script>
+<script src="/GCTC/js/handlebars-v4.0.5.js"></script>
+<script src="/GCTC/js/underscore.js"></script>
+<script src="/GCTC/js/jquery.dataTables.min.js"></script>
+<script src="/GCTC/js/jquery.dataTables.yadcf.js"></script>
 
 
 <style type="text/css">
@@ -333,7 +333,7 @@
 {{/each}}
 </script> 
 	
-	<script src="https://pages.nist.gov/GCTC/js/datatable-tabletop-load.js"></script> 
+	<script src="/GCTC/js/datatable-tabletop-load.js"></script> 
 	<script type="text/javascript">
 
 Handlebars.registerHelper('cleanConcat', function() {
