--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -45,8 +45,8 @@
   <link rel="apple-touch-icon" href="https://pages.nist.gov/GCTC/img/apple-touch-icon.png" />
   
 
-  <link href="https://pages.nist.gov/GCTC/css/owl.carousel.css" rel="stylesheet">
-  <link href="https://pages.nist.gov/GCTC/css/owl.theme.css" rel="stylesheet">
+  <link href="/GCTC/css/owl.carousel.css" rel="stylesheet">
+  <link href="/GCTC/css/owl.theme.css" rel="stylesheet">
 
   <link rel="alternate" href="https://pages.nist.gov/index.xml" type="application/rss+xml" title="Global City Team Challenge">
 
