--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -61,8 +61,8 @@
 </head>
 
   
-  <link href="https://pages.nist.gov/GCTC/css/jquery.dataTables.min.css" rel="stylesheet">
-<link href="https://pages.nist.gov/GCTC/css/jquery.dataTables.yadcf.css" rel="stylesheet">
+  <link href="/GCTC/css/jquery.dataTables.min.css" rel="stylesheet">
+<link href="/GCTC/css/jquery.dataTables.yadcf.css" rel="stylesheet">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="/GCTC/js/tabletop.js"></script>
