icons for buttons

--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -130,12 +130,12 @@
 	 .cards tbody td {width: 86vw;}
 	}
 	
-	#btnTransportation {background:url(../images/transportation-icon-071217.png) no-repeat 50% 0;}
-#btnPublichHealth {background:url(../images/Public-health-icon-071217.png) no-repeat 50% 0;}
-#btnEnergyWater {background:url(../images/energy-environment-icon-071217.png) no-repeat 50% 0;}
-#btnInfrasctructure{background:url(../images/infrastructure-icon-071217.png) no-repeat 50% 0;}
-#btnDataTech{background:url(../images/data-tech-icon-071217.png) no-repeat 50% 0;}
-#btnUrban{background:url(../images/urban-planning-icon-071217.png) no-repeat 50% 0;}
+	#btnTransportation {background:url(/GCTC/images/transportation-icon-071217.png) no-repeat 50% 0;}
+#btnPublichHealth {background:url(/GCTC/images/Public-health-icon-071217.png) no-repeat 50% 0;}
+#btnEnergyWater {background:url(/GCTC/images/energy-environment-icon-071217.png) no-repeat 50% 0;}
+#btnInfrasctructure{background:url(/GCTC/images/infrastructure-icon-071217.png) no-repeat 50% 0;}
+#btnDataTech{background:url(/GCTC/images/data-tech-icon-071217.png) no-repeat 50% 0;}
+#btnUrban{background:url(/GCTC/images/urban-planning-icon-071217.png) no-repeat 50% 0;}
 
 #btnTransportation, 
 #btnPublichHealth,
