speaker page updates

--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -225,7 +225,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Speakers</h1>
+                <h1>Speakers include:</h1>
             </div>
         </div>
     </div>
@@ -250,7 +250,7 @@
     height: 200px;
     width:100%;}
     .inlineBlock h3 {margin-bottom:0;}
-    .inlineBlock p {margin-top:0;font-size:12px;}
+    .inlineBlock p {margin-top:0;font-size:13px;}
 </style>
 
 <div class="gridWrap">
@@ -260,9 +260,9 @@
         <p>Mayor, San Leandro, California</p>
     </div>
     <div class="inlineBlock">
-        <img alt="Sly James" src="/GCTC/uploads/2017/07/11/02-SlyJames-crop.jpg">       
-        <h3>Sly James</h3>
-        <p>Mayor, Kansas City, Missouri</p>
+        <img alt="Sly James" src="/GCTC/uploads/2017/07/11/Ted_Wheeler_portrait.jpg">       
+        <h3>Ted Wheeler </h3>
+        <p>Mayor, Portland, Oregon</p>
     </div>
     <div class="inlineBlock">
         <img alt="Gary McCarthy" src="/GCTC/uploads/2017/07/11/03-GaryMcCarthy-crop.jpg">       
