latest and greatest

--- a/super-clusters/index.html
+++ b/super-clusters/index.html
@@ -269,7 +269,7 @@
 
 <h3 id="chair-2">Chair:</h3>
 
-<p><strong>Ed Davalos, Director of Internet of Things and Smart Cities, AT&amp;T</strong></p>
+<p><strong>Ed Davalos, Sales Leader, Motorola Solutions</strong></p>
 
 <p><img src="/GCTC/uploads/2017/04/19/Ed%20Davalos%20-%20Pic%201.1.gif" alt="" /></p>
 
