--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -255,30 +255,71 @@
 
 <div class="gridWrap">
     <div class="inlineBlock">
-        <img alt="Pauline Cutter" src="/GCTC/uploads/2017/07/11/01-PaulineCutter-crop.jpg">     
-        <h3>Pauline Cutter</h3>
-        <p>Mayor, San Leandro, California</p>
-    </div>
-    <div class="inlineBlock">
         <img alt="Sly James" src="/GCTC/uploads/2017/07/11/Ted_Wheeler_portrait.jpg">       
         <h3>Ted Wheeler </h3>
         <p>Mayor, Portland, Oregon</p>
     </div>
+	<div class="inlineBlock">
+        <img alt="Pauline Cutter" src="/GCTC/uploads/2017/07/11/01-PaulineCutter-crop.jpg">     
+        <h3>Pauline Cutter</h3>
+        <p>Mayor, San Leandro, California</p>
+    </div>    
     <div class="inlineBlock">
         <img alt="Gary McCarthy" src="/GCTC/uploads/2017/07/11/03-GaryMcCarthy-crop.jpg">       
         <h3>Gary McCarthy</h3>
         <p>Mayor, Schenectady, New York</p>
-    </div>
-    <div class="inlineBlock">
-        <img alt="Hayato Shimizu" src="/GCTC/uploads/2017/07/11/04-HayatoShimizu2-crop.jpg">        
-        <h3>Hayato Shimizu</h3>
-        <p>Mayor, Saitama, Japan</p>
-    </div>
+    </div>    
     <div class="inlineBlock">
         <img alt="Acquanetta Warren" src="/GCTC/uploads/2017/07/11/05-AcquanettaWarren-crop.jpg">       
         <h3>Acquanetta Warren</h3>
         <p>Mayor, Fontana, California</p>
     </div>
+	<div class="inlineBlock">
+        <img alt="Hayato Shimizu" src="/GCTC/uploads/2017/07/11/04-HayatoShimizu2-crop.jpg">        
+        <h3>Hayato Shimizu</h3>
+        <p>Mayor, Saitama, Japan</p>
+    </div>
+	<div class="inlineBlock">
+        <img src="/GCTC/uploads/2017/04/19/Bob%20Bennett%203-1.jpg">        
+        <h3>Bob Bennett</h3>
+        <p>Chief Innovation Officer, Kansas City, MO</p>        
+    </div>
+	<div class="inlineBlock">
+        <img alt="Wilfred_Pinfold" src="/GCTC/uploads/2017/04/19/Wilfred_Pinfold.png">      
+        <h3>Wilfred Pinfold</h3>
+        <p>CEO, Urban Systems</p>       
+    </div> 
+	<div class="inlineBlock">
+        <img src="/GCTC/uploads/2017/04/19/skip_newberry.jpeg">     
+        <h3>Skip Newbery</h3>
+        <p>President and CEO, Technology Associates of Oregon</p>       
+    </div>
+	<div class="inlineBlock">
+        <img src="/GCTC/uploads/2017/04/19/Michael%20Dunaway.jpg">      
+        <h3>Michael Dunaway</h3>
+        <p>Director, NIMSAT, Informatics Research Institute (IRI), University of Louisiana at Lafayette</p>     
+    </div>
+	<div class="inlineBlock">
+        <img src="/GCTC/uploads/2017/04/19/Ed%20Davalos%20-%20Pic%201.1.gif">       
+        <h3>Ed Davalos</h3>
+        <p>Sales Leader, Motorola Solutions</p>        
+    </div>
+	<div class="inlineBlock">
+        <img src="/GCTC/uploads/2017/04/19/David%20Witkowski_Jacket_1920_1920-1.jpg">       
+        <h3>David Witkowski</h3>
+        <p>Executive Director, Wireless Communications Initiative, Joint Venture Silicon Valley</p>     
+    </div>
+	<div class="inlineBlock">
+        <img src="/GCTC/uploads/2017/04/19/JonWalton%20Image-2.jpeg">       
+        <h3>Jon Walton</h3>
+        <p>Chief Information Officer, San Mateo County, CA</p>      
+    </div>
+	<div class="inlineBlock">
+        <img src="/GCTC/uploads/2017/04/19/Tony_Battala.jpg">       
+        <h3>Tony Batalla</h3>
+        <p>IT Manager/Director, City of San Leandro, CA</p>     
+    </div>
+	<!--
     <div class="inlineBlock">
         <img alt="Hideyuki Tokuda" src="/GCTC/uploads/2017/07/11/06-HideyukiTokuda2-crop.jpg">      
         <h3>Hideyuki Tokuda</h3>
@@ -288,47 +329,7 @@
         <img alt="Holly Vineyard" src="/GCTC/uploads/2017/07/11/07-Holly-Vineyard.jpg">     
         <h3>Holly Vineyard</h3>
         <p>Principal Deputy Assistant Secretary, U.S. Department of Commerce, International Trade Administration</p>
-    </div>
-    <div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/Tony_Battala.jpg">       
-        <h3>Tony Batalla</h3>
-        <p>IT Manager/Director, City of San Leandro, CA</p>     
-    </div>
-    <div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/Bob%20Bennett%203-1.jpg">        
-        <h3>Bob Bennett</h3>
-        <p>Chief Innovation Officer, Kansas City, MO</p>        
-    </div>  
-    <div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/Ed%20Davalos%20-%20Pic%201.1.gif">       
-        <h3>Ed Davalos</h3>
-        <p>Director of Internet of Things and Smart Cities, AT&amp;T</p>        
-    </div>  
-    <div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/Michael%20Dunaway.jpg">      
-        <h3>Michael Dunaway</h3>
-        <p>Director, NIMSAT, Informatics Research Institute (IRI), University of Louisiana at Lafayette</p>     
-    </div>
-    <div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/skip_newberry.jpeg">     
-        <h3>Skip Newbery</h3>
-        <p>President and CEO, Technology Associates of Oregon</p>       
-    </div>  
-    <div class="inlineBlock">
-        <img alt="Wilfred_Pinfold" src="/GCTC/uploads/2017/04/19/Wilfred_Pinfold.png">      
-        <h3>Wilfred Pinfold</h3>
-        <p>CEO, Urban Systems</p>       
-    </div>      
-    <div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/JonWalton%20Image-2.jpeg">       
-        <h3>Jon Walton</h3>
-        <p>Chief Information Officer, San Mateo County, CA</p>      
-    </div>  
-    <div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/David%20Witkowski_Jacket_1920_1920-1.jpg">       
-        <h3>David Witkowski</h3>
-        <p>Executive Director, Wireless Communications Initiative, Joint Venture Silicon Valley</p>     
-    </div>  
+    </div> -->
 </div>
 						  
                         </div>
