updated image file name

--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -133,7 +133,7 @@
 	#btnTransportation {background:url(/GCTC/images/transportation-icon-071217.png) no-repeat 50% 0;}
 #btnPublichHealth {background:url(/GCTC/images/Public-health-icon-071217.png) no-repeat 50% 0;}
 #btnEnergyWater {background:url(/GCTC/images/energy-environment-icon-071217.png) no-repeat 50% 0;}
-#btnInfrasctructure{background:url(/GCTC/images/city-data platform-icon-071717.png) no-repeat 50% 0;}
+#btnInfrasctructure{background:url(/GCTC/images/city-data-platform-icon-071717.png) no-repeat 50% 0;}
 #btnDataTech{background:url(/GCTC/images/data-tech-icon-071217.png) no-repeat 50% 0;}
 #btnUrban{background:url(/GCTC/images/urban-planning-icon-071217.png) no-repeat 50% 0;}
 
