updated image file name

--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -507,8 +507,8 @@ $('#btnTransportation').on('click', function () {
 		$("#sectorHead").html("Transportation");
     }); 
 $('#btnPublichHealth').on('click', function () {
-        oTable.columns(0).search("Public Health & Safety" ).draw();
-		$("#sectorHead").html("Public Health & Safety");
+        oTable.columns(0).search("Public Safety" ).draw();
+		$("#sectorHead").html("Public Safety");
     }); 
 $('#btnEnergyWater').on('click', function () {
         oTable.columns(0).search("Energy, Water & Environment" ).draw();
