--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -425,7 +425,7 @@
 		<script id="datatable-template" type="text/x-handlebars-template">
 		{{#each elements}}
             <tr>				
-<td class="Sector" data-title="Sector:" style="display:none;">{{Sector}}</td>
+<td class="Sector" data-title="Sector:"><span>{{Sector}}</span></td>
 <td class="ActionCluster" data-title="Action-Cluster:"><strong>Action Cluster:</strong> {{Action-Cluster}}</td>
 <td class="Year" data-title="Year:"><strong>Year:</strong> {{Year}}</td>
 <td class="MuniGov" data-title="Municipal-Governments:"><strong>Municipal Governments</strong> {{Municipal-Governments}}</td>
