--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -529,10 +529,10 @@ $('#btnUrban').on('click', function () {
 		$("#sectorHead").html("Other");
     }); 	
 $('#btn2016').on('click', function () {
-        oTable.columns(1).search("2016" ).draw();		
+        oTable.columns(1).search("Year: 2016" ).draw();
     }); 	
 $('#btn2017').on('click', function () {
-        oTable.columns(1).search("2017" ).draw();		
+        oTable.columns(1).search("Year: 2017" ).draw();		
     }); 	
 
 
