--- a/action-clusters/index.html
+++ b/action-clusters/index.html
@@ -482,11 +482,12 @@ $('#btnUrban').on('click', function () {
     }); 	
 $('#btn2016').on('click', function () {
         oTable.columns(1).search("2016" ).draw();
+		$("#sectorHead").append("2016");
     }); 	
 $('#btn2017').on('click', function () {
         oTable.columns(1).search("2017" ).draw();		
+		$("#sectorHead").append("2017");
     }); 	
-
 
 	
 
