--- a/action-clusters-2016/index.html
+++ b/action-clusters-2016/index.html
@@ -7,7 +7,7 @@
   <meta name="googlebot" content="index,follow,snippet,archive">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Action Clusters 2017</title>
+  <title>Action Clusters 2016</title>
 
   <meta name="author" content="" />
   <meta name="keywords" content="">
@@ -311,7 +311,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Action Clusters 2017</h1>
+                <h1>Action Clusters 2016</h1>
             </div>
         </div>
     </div>
@@ -340,9 +340,8 @@
 							<button id="btnDataTech">Public Wi-Fi/Broadband</button>
 							<button id="btnUrban">Other</button>							
 						</div>
-						
 						<div>
-							<h3><a href="/GCTC/action-clusters-2016/">View 2016 Action Clusters</h3>
+							<h3><a href="/GCTC/action-clusters/">View 2017 Action Clusters</h3>
 						</div>
 						
 						<h2 id="sectorHead">All Sectors <span> </span></h2>
@@ -394,7 +393,7 @@
 {{/each}}
 </script> 
 	
-	<script src="/GCTC/js/datatable-tabletop-load-2017-action-cluster.js"></script> 
+	<script src="/GCTC/js/datatable-tabletop-load-2016-action-cluster.js"></script> 
 	<script type="text/javascript">
 
 Handlebars.registerHelper('cleanConcat', function() {
