--- a/action-clusters/index.html
+++ b/action-clusters/index.html
@@ -464,32 +464,24 @@ $('#btnTransportation').on('click', function () {
 		$("#sectorHead").html("Transportation");
     }); 
 $('#btnPublichHealth').on('click', function () {
-        oTable.columns(0).search("Public Health & Safety" ).draw();
-		$("#sectorHead").html("Public Health & Safety");
+        oTable.columns(0).search("Public Safety" ).draw();
+		$("#sectorHead").html("Public Safety");
     }); 
 $('#btnEnergyWater').on('click', function () {
         oTable.columns(0).search("Energy, Water & Environment" ).draw();
 		$("#sectorHead").html("Energy, Water & Environment");
     }); 
 $('#btnInfrasctructure').on('click', function () {
-        oTable.columns(0).search("Infrastructure" ).draw();
-		$("#sectorHead").html("Infrastructure");
+        oTable.columns(0).search("City Data Platform/Dashboard" ).draw();
+		$("#sectorHead").html("City Data Platform/Dashboard");
     }); 
 $('#btnDataTech').on('click', function () {
-        oTable.columns(0).search("Data/Technology Platforms" ).draw();
-		$("#sectorHead").html("Data/Technology Platforms");
+        oTable.columns(0).search("Public Wi-Fi/Broadband" ).draw();
+		$("#sectorHead").html("Public Wi-Fi/Broadband");
     }); 	
 $('#btnUrban').on('click', function () {
-        oTable.columns(0).search("Urban Planning" ).draw();
-		$("#sectorHead").html("Urban Planning");
-    }); 	
-$('#btn2016').on('click', function () {
-        oTable.columns(1).search("2016" ).draw();
-		$("#sectorHead span").html("2016");
-    }); 	
-$('#btn2017').on('click', function () {
-        oTable.columns(1).search("2017" ).draw();		
-		$("#sectorHead span").html("2017");
+        oTable.columns(0).search("Other" ).draw();
+		$("#sectorHead").html("Other");
     }); 	
 
 	
