--- a/action-clusters-2016/index.html
+++ b/action-clusters-2016/index.html
@@ -65,7 +65,7 @@
 <link href="/GCTC/css/jquery.dataTables.yadcf.css" rel="stylesheet">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="/GCTC/js/tabletop.js"></script>
+<script src="/GCTC/js/tabletop.min.js"></script>
 <script src="/GCTC/js/handlebars-v4.0.5.js"></script>
 <script src="/GCTC/js/underscore.js"></script>
 <script src="/GCTC/js/jquery.dataTables.min.js"></script>
