added tableotop minified

--- a/action-clusters-2016/index.html
+++ b/action-clusters-2016/index.html
@@ -344,7 +344,7 @@
 							<h3><a href="/GCTC/action-clusters/">View 2017 Action Clusters</h3>
 						</div>
 						
-						<h2 id="sectorHead">All Sectors <span> </span></h2>
+						<h2 id="sectorHead">All Sectors</h2>
 						
 						<table id="searchable-table" cellpadding="5" cellspacing="0" border="0" width="100%"  class="cards">
 		<thead>
