--- a/action-clusters-2016/index.html
+++ b/action-clusters-2016/index.html
@@ -341,7 +341,7 @@
 							<button id="btnUrban">Other</button>							
 						</div>
 						<div>
-							<h3><a href="/GCTC/action-clusters/">View 2017 Action Clusters</h3>
+							<h3><a href="/GCTC/action-clusters/">View 2017 Action Clusters</a></h3>
 						</div>
 						
 						<h2 id="sectorHead">All Sectors</h2>
