--- a/action-clusters/index.html
+++ b/action-clusters/index.html
@@ -342,7 +342,7 @@
 						</div>
 						
 						<div>
-							<h3><a href="/GCTC/action-clusters-2016/">View 2016 Action Clusters</h3>
+							<h3><a href="/GCTC/action-clusters-2016/">View 2016 Action Clusters</a></h3>
 						</div>
 						
 						<h2 id="sectorHead">All Sectors <span> </span></h2>
