remove wifi button

--- a/action-clusters-2016/index.html
+++ b/action-clusters-2016/index.html
@@ -337,7 +337,7 @@
 							<button id="btnPublichHealth">Public Safety</button>
 							<button id="btnEnergyWater">Energy, Water, &amp; Environment</button>
 							<button id="btnInfrasctructure">City Data Platform/Dashboard</button>
-							<button id="btnDataTech">Public Wi-Fi/Broadband</button>
+							<!-- <button id="btnDataTech">Public Wi-Fi/Broadband</button> -->
 							<button id="btnUrban">Other</button>							
 						</div>
 						<div>
