--- a/event/gctc-expo-2017/index.html
+++ b/event/gctc-expo-2017/index.html
@@ -17,7 +17,7 @@
   
     <link href="https://pages.nist.gov/GCTC/css/style.default.css" rel="stylesheet" id="theme-stylesheet">
   
-<link href="https://pages.nist.gov/GCTC/css/custom.css" rel="stylesheet">
+<link href="/GCTC/css/custom.css" rel="stylesheet">
 <style>
 	html, body {padding: 0;margin: 0;}
 	body {font-family: 'Open Sans', sans-serif;font-size:18px; overflow-x: hidden;line-height: 1.6;}
