--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -287,8 +287,18 @@
         <h3>Hayato Shimizu</h3>
         <p>Mayor, Saitama, Japan</p>
     </div>
+    <div class="inlineBlock">
+        <img alt="Holly Vineyard" src="/GCTC/uploads/2017/07/11/07-Holly-Vineyard.jpg">     
+        <h3>Holly Vineyard</h3>
+        <p>Principal Deputy Assistant Secretary, U.S. Department of Commerce, International Trade Administration</p>
+    </div>
+    <div class="inlineBlock">
+        <img alt="Chris Greer" src="/GCTC/uploads/2017/07/11/Chris-Greer.jpg">     
+        <h3>Chris Greer</h3>
+        <p>Senior Executive for Cyber-Physical Systems, National Institute of Standards and Technology</p>
+    </div>
 	<div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/Bob%20Bennett%203-1.jpg">        
+        <img alt="Bob Bennett" src="/GCTC/uploads/2017/04/19/Bob%20Bennett%203-1.jpg">        
         <h3>Bob Bennett</h3>
         <p>Chief Innovation Officer, Kansas City, MO</p>        
     </div>
@@ -298,34 +308,39 @@
         <p>CEO, Urban Systems</p>       
     </div> 
 	<div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/skip_newberry.jpeg">     
+        <img alt="Skip Newbery" src="/GCTC/uploads/2017/04/19/skip_newberry.jpeg">     
         <h3>Skip Newbery</h3>
         <p>President and CEO, Technology Associates of Oregon</p>       
     </div>
 	<div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/Michael%20Dunaway.jpg">      
+        <img alt="Michael Dunaway" src="/GCTC/uploads/2017/04/19/Michael%20Dunaway.jpg">      
         <h3>Michael Dunaway</h3>
         <p>Director, NIMSAT, Informatics Research Institute (IRI), University of Louisiana at Lafayette</p>     
     </div>
 	<div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/Ed%20Davalos%20-%20Pic%201.1.gif">       
+        <img alt="Ed Davalos" src="/GCTC/uploads/2017/04/19/Ed%20Davalos%20-%20Pic%201.1.gif">       
         <h3>Ed Davalos</h3>
         <p>Sales Leader, Motorola Solutions</p>        
     </div>
 	<div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/David%20Witkowski_Jacket_1920_1920-1.jpg">       
+        <img alt="David Witkowski" src="/GCTC/uploads/2017/04/19/David%20Witkowski_Jacket_1920_1920-1.jpg">       
         <h3>David Witkowski</h3>
         <p>Executive Director, Wireless Communications Initiative, Joint Venture Silicon Valley</p>     
     </div>
 	<div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/JonWalton%20Image-2.jpeg">       
+        <img alt="Jon Walton" src="/GCTC/uploads/2017/04/19/JonWalton%20Image-2.jpeg">       
         <h3>Jon Walton</h3>
         <p>Chief Information Officer, San Mateo County, CA</p>      
     </div>
 	<div class="inlineBlock">
-        <img src="/GCTC/uploads/2017/04/19/Tony_Battala.jpg">       
+        <img alt="Tony Batalla" src="/GCTC/uploads/2017/04/19/Tony_Battala.jpg">       
         <h3>Tony Batalla</h3>
         <p>IT Manager/Director, City of San Leandro, CA</p>     
+    </div>
+    <div class="inlineBlock">
+        <img alt="Ben Levine" src="/GCTC/uploads/2017/04/19/Ben_bio_pic.jpg">       
+        <h3>Ben Levine</h3>
+        <p>Executive director, MetroLab Network</p>     
     </div>
 	<!--
     <div class="inlineBlock">
@@ -333,11 +348,7 @@
         <h3>Hideyuki Tokuda</h3>
         <p>President, National Institute of Information and Communications Technology, Japan</p>
     </div>
-    <div class="inlineBlock">
-        <img alt="Holly Vineyard" src="/GCTC/uploads/2017/07/11/07-Holly-Vineyard.jpg">     
-        <h3>Holly Vineyard</h3>
-        <p>Principal Deputy Assistant Secretary, U.S. Department of Commerce, International Trade Administration</p>
-    </div> -->
+     -->
 </div>
 						  
                         </div>
