edit to about gctc page

--- a/about/the-gctc/index.html
+++ b/about/the-gctc/index.html
@@ -211,10 +211,12 @@
 
 <p>For further information, contact the organizer, Sokwoo Rhee (<a href="mailto:sokwoo.rhee@nist.gov">sokwoo.rhee@nist.gov</a>).</p>
 
+<h3>Organizers</h3>
 <p><strong>Sokwoo Rhee, Associate Director, Cyber-Physical Systems Program, NIST</strong></p>
 
-<p><img src="/GCTC/uploads/2017/04/19/Sokwoo%20Rhee-1.JPG" alt="" /></p>
-
+<p><img alt="Sokwoo Rhee" src="/GCTC/uploads/2017/04/19/Sokwoo%20Rhee-1.JPG" width="662" /></p>
+<p><strong>Chris Greer, Senior Executive for Cyber-Physical Systems, National Institute of Standards and Technology</strong></p>
+<p><img alt="Chris Greer" src="/GCTC/uploads/2017/07/11/Chris-Greer.jpg"></p>
                         </div>
 
                     </div>
