--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -340,7 +340,7 @@
     <div class="inlineBlock">
         <img alt="Ben Levine" src="/GCTC/uploads/2017/07/11/Ben_bio_pic.jpg">
         <h3>Ben Levine</h3>
-        <p>Executive director, MetroLab Network</p>     
+        <p>Executive Director, MetroLab Network</p>     
     </div>
 	<!--
     <div class="inlineBlock">
