--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -402,24 +402,20 @@
         <p>Executive Director, MetroLab Network</p>     
     </div>
 	
-	<div class="inlineBlock">
-		<img alt="Nick Maynard src=/GCTC/uploads/2017/07/11/NickMaynard.jpg">
-		<h3>Nick Maynard</h3>
-		<p>Co-founder and Chief Strategy Officer, US-Ignite</p> 
-	</div>
-<div class="inlineBlock"><img alt="Bill Maguire src=/GCTC/uploads/2017/07/11/BillMaguireLinkedInwhitebackground.jpg"><h3>Bill Maguire</h3><p>Program Manager/Consultant, US-Ignite</p> </div>
-<div class="inlineBlock"><img alt="Grant Ervin src=/GCTC/uploads/2017/07/11/Grant_picture_03.jpg"><h3>Grant Ervin</h3><p>Chief Resilince Officer, Pittsburgh, PA</p> </div>
-<div class="inlineBlock"><img alt="Darrin Jenkins src=/GCTC/uploads/2017/07/11/DarrinJenkinsphoto.jpg"><h3>Darrin Jenkins</h3><p>City Manager, Rohnert Park, CA</p> </div>
-<div class="inlineBlock"><img alt="Dan Hoffman src=/GCTC/uploads/2017/07/11/hoffman.jpg"><h3>Dan Hoffman</h3><p>Assistant City Manager, Gainesville, FL</p> </div>
-<div class="inlineBlock"><img alt="Jorge Alfonso Kurano src=/GCTC/uploads/2017/07/11/JorgeAlfonsoKurano.jpg"><h3>Jorge Alfonso Kurano</h3><p>Project Manager, Universidad Politecnica de Madrid</p> </div>
-<div class="inlineBlock"><img alt="Rui A. Costa src=/GCTC/uploads/2017/07/11/photo_rui_costa.png"><h3>Rui A. Costa</h3><p>CEO, Ubiwhere</p> </div>
-<div class="inlineBlock"><img alt="Mathieu Carlier src=/GCTC/uploads/2017/07/11/photo_mathieu_carlier.jpg"><h3>Mathieu Carlier</h3><p>CEO, Everimpact</p> </div>
-<div class="inlineBlock"><img alt="Jose Gonzalez src=/GCTC/uploads/2017/07/11/photo_jose_gonzalez.png"><h3>Jose Gonzalez</h3><p>International Coordinator, FIWARE</p> </div>
-<div class="inlineBlock"><img alt="Antonio Jara src=/GCTC/uploads/2017/07/11/photo_antonio_jara.png"><h3>Antonio Jara</h3><p>CEO, HOP Ubiquitous</p> </div>
-<div class="inlineBlock"><img alt="Andrea Cruciani src=/GCTC/uploads/2017/07/11/photo_andrea_cruciani.jpg"><h3>Andrea Cruciani</h3><p>CEO, TeamDev</p> </div>
-<div class="inlineBlock"><img alt="Lanfranco Marasso src=/GCTC/uploads/2017/07/11/marasso.jpg"><h3>Lanfranco Marasso</h3><p>Smart City Program Director, Engineering Ingegneria Informatica S.p.A</p> </div>
-<div class="inlineBlock"><img alt="Joshua Tan src=/GCTC/uploads/2017/07/11/tan.jpg"><h3>Joshua Tan</h3><p>Researcher, Oxford University</p> </div>
-<div class="inlineBlock"><img alt="Christine Kendrick src=/GCTC/uploads/2017/07/11/kendrick.jpg"><h3>Christine Kendrick</h3><p>Smart Cities Project Manager, Portland, OR</p> </div>
+	<div class="inlineBlock"><img alt="Nick Maynard" src="/GCTC/uploads/2017/07/11/NickMaynard.jpg"><h3>Nick Maynard</h3><p>Co-founder and Chief Strategy Officer, US-Ignite</p> </div>
+	<div class="inlineBlock"><img alt="Bill Maguire" src="/GCTC/uploads/2017/07/11/BillMaguireLinkedInwhitebackground.jpg"><h3>Bill Maguire</h3><p>Program Manager/Consultant, US-Ignite</p> </div>
+	<div class="inlineBlock"><img alt="Grant Ervin" src="/GCTC/uploads/2017/07/11/Grant_picture_03.jpg"><h3>Grant Ervin</h3><p>Chief Resilince Officer, Pittsburgh, PA</p> </div>
+	<div class="inlineBlock"><img alt="Darrin Jenkins" src="/GCTC/uploads/2017/07/11/DarrinJenkinsphoto.jpg"><h3>Darrin Jenkins</h3><p>City Manager, Rohnert Park, CA</p> </div>
+	<div class="inlineBlock"><img alt="Dan Hoffman" src="/GCTC/uploads/2017/07/11/hoffman.jpg"><h3>Dan Hoffman</h3><p>Assistant City Manager, Gainesville, FL</p> </div>
+	<div class="inlineBlock"><img alt="Jorge Alfonso Kurano" src="/GCTC/uploads/2017/07/11/JorgeAlfonsoKurano.jpg"><h3>Jorge Alfonso Kurano</h3><p>Project Manager, Universidad Politecnica de Madrid</p> </div>
+	<div class="inlineBlock"><img alt="Rui A. Costa" src="/GCTC/uploads/2017/07/11/photo_rui_costa.png"><h3>Rui A. Costa</h3><p>CEO, Ubiwhere</p> </div>
+	<div class="inlineBlock"><img alt="Mathieu Carlier" src="/GCTC/uploads/2017/07/11/photo_mathieu_carlier.jpg"><h3>Mathieu Carlier</h3><p>CEO, Everimpact</p> </div>
+	<div class="inlineBlock"><img alt="Jose Gonzalez" src="/GCTC/uploads/2017/07/11/photo_jose_gonzalez.png"><h3>Jose Gonzalez</h3><p>International Coordinator, FIWARE</p> </div>
+	<div class="inlineBlock"><img alt="Antonio Jara" src="/GCTC/uploads/2017/07/11/photo_antonio_jara.png"><h3>Antonio Jara</h3><p>CEO, HOP Ubiquitous</p> </div>
+	<div class="inlineBlock"><img alt="Andrea Cruciani" src="/GCTC/uploads/2017/07/11/photo_andrea_cruciani.jpg"><h3>Andrea Cruciani</h3><p>CEO, TeamDev</p> </div>
+	<div class="inlineBlock"><img alt="Lanfranco Marasso" src="/GCTC/uploads/2017/07/11/marasso.jpg"><h3>Lanfranco Marasso</h3><p>Smart City Program Director, Engineering Ingegneria Informatica S.p.A</p> </div>
+	<div class="inlineBlock"><img alt="Joshua Tan" src="/GCTC/uploads/2017/07/11/tan.jpg"><h3>Joshua Tan</h3><p>Researcher, Oxford University</p> </div>
+	<div class="inlineBlock"><img alt="Christine Kendrick" src="/GCTC/uploads/2017/07/11/kendrick.jpg"><h3>Christine Kendrick</h3><p>Smart Cities Project Manager, Portland, OR</p> </div>
 
 	
 	<!--
