--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -265,32 +265,32 @@
     <div class="inlineBlock">
         <img alt="Sly James" src="/GCTC/uploads/2017/07/11/Ted_Wheeler_portrait.jpg">       
         <h3>Ted Wheeler </h3>
-        <p>Mayor, Portland, Oregon</p>
+        <p>Mayor, City of Portland, Oregon</p>
     </div>
 	<div class="inlineBlock">
         <img alt="Pauline Cutter" src="/GCTC/uploads/2017/07/11/01-PaulineCutter-crop.jpg">     
         <h3>Pauline Cutter</h3>
-        <p>Mayor, San Leandro, California</p>
+        <p>Mayor, City of San Leandro, California</p>
     </div>    
     <div class="inlineBlock">
         <img alt="Gary McCarthy" src="/GCTC/uploads/2017/07/11/03-GaryMcCarthy-crop.jpg">       
         <h3>Gary McCarthy</h3>
-        <p>Mayor, Schenectady, New York</p>
+        <p>Mayor, City of Schenectady, New York</p>
     </div>    
     <div class="inlineBlock">
         <img alt="Acquanetta Warren" src="/GCTC/uploads/2017/07/11/05-AcquanettaWarren-crop.jpg">       
         <h3>Acquanetta Warren</h3>
-        <p>Mayor, Fontana, California</p>
+        <p>Mayor, City of Fontana, California</p>
     </div>
 	<div class="inlineBlock">
         <img alt="Roy D. Buol" src="/GCTC/uploads/2017/07/11/MayorRoyBuolHi-Res_LG.jpg">       
         <h3>Roy D. Buol</h3>
-        <p>Mayor, Dubuque, IA</p>
+        <p>Mayor, City of Dubuque, IA</p>
     </div>
 	<div class="inlineBlock">
         <img alt="Hayato Shimizu" src="/GCTC/uploads/2017/07/11/04-HayatoShimizu2-crop.jpg">        
         <h3>Hayato Shimizu</h3>
-        <p>Mayor, Saitama, Japan</p>
+        <p>Mayor, City of Saitama, Japan</p>
     </div>
     <div class="inlineBlock">
         <img alt="Holly Vineyard" src="/GCTC/uploads/2017/07/11/07-Holly-Vineyard.jpg">     
@@ -340,7 +340,7 @@
 	<div class="inlineBlock">
         <img alt="Ming-Teh Wang" src="/GCTC/uploads/2017/07/11/TaoyuanDeputyMayorWangPhoto.jpg">     
         <h3>Ming-Teh Wang</h3>
-        <p>Deputy Mayor, Taoyuan, Taiwan </p>
+        <p>Deputy Mayor, City of Taoyuan, Taiwan </p>
     </div>
 	
 	<div class="inlineBlock">
@@ -352,7 +352,7 @@
 	<div class="inlineBlock">
         <img alt="Bob Bennett" src="/GCTC/uploads/2017/04/19/Bob%20Bennett%203-1.jpg">        
         <h3>Bob Bennett</h3>
-        <p>Chief Innovation Officer, Kansas City, MO</p>        
+        <p>Chief Innovation Officer, City of Kansas City, MO</p>        
     </div>
 	<div class="inlineBlock">
         <img alt="Wilfred_Pinfold" src="/GCTC/uploads/2017/04/19/Wilfred_Pinfold.png">      
@@ -378,7 +378,7 @@
 	<div class="inlineBlock">
         <img alt="Deborah Acosta" src="/GCTC/uploads/2017/07/11/Acosta.jpg">       
         <h3>Deborah Acosta</h3>
-        <p>CTO, San Leandro, CA</p>        
+        <p>CTO, City of San Leandro, CA</p>        
     </div>
 	
 	<div class="inlineBlock">
@@ -404,9 +404,9 @@
 	
 	<div class="inlineBlock"><img alt="Nick Maynard" src="/GCTC/uploads/2017/07/11/NickMaynard.jpg"><h3>Nick Maynard</h3><p>Co-founder and Chief Strategy Officer, US-Ignite</p> </div>
 	<div class="inlineBlock"><img alt="Bill Maguire" src="/GCTC/uploads/2017/07/11/BillMaguireLinkedInwhitebackground.jpg"><h3>Bill Maguire</h3><p>Program Manager/Consultant, US-Ignite</p> </div>
-	<div class="inlineBlock"><img alt="Grant Ervin" src="/GCTC/uploads/2017/07/11/Grant_picture_03.jpg"><h3>Grant Ervin</h3><p>Chief Resilince Officer, Pittsburgh, PA</p> </div>
-	<div class="inlineBlock"><img alt="Darrin Jenkins" src="/GCTC/uploads/2017/07/11/DarrinJenkinsphoto.jpg"><h3>Darrin Jenkins</h3><p>City Manager, Rohnert Park, CA</p> </div>
-	<div class="inlineBlock"><img alt="Dan Hoffman" src="/GCTC/uploads/2017/07/11/hoffman.jpg"><h3>Dan Hoffman</h3><p>Assistant City Manager, Gainesville, FL</p> </div>
+	<div class="inlineBlock"><img alt="Grant Ervin" src="/GCTC/uploads/2017/07/11/Grant_picture_03.jpg"><h3>Grant Ervin</h3><p>Chief Resilince Officer, City of Pittsburgh, PA</p> </div>
+	<div class="inlineBlock"><img alt="Darrin Jenkins" src="/GCTC/uploads/2017/07/11/DarrinJenkinsphoto.jpg"><h3>Darrin Jenkins</h3><p>City Manager, City of Rohnert Park, CA</p> </div>
+	<div class="inlineBlock"><img alt="Dan Hoffman" src="/GCTC/uploads/2017/07/11/hoffman.jpg"><h3>Dan Hoffman</h3><p>Assistant City Manager, City of Gainesville, FL</p> </div>
 	<div class="inlineBlock"><img alt="Jorge Alfonso Kurano" src="/GCTC/uploads/2017/07/11/JorgeAlfonsoKurano.jpg"><h3>Jorge Alfonso Kurano</h3><p>Project Manager, Universidad Politecnica de Madrid</p> </div>
 	<div class="inlineBlock"><img alt="Rui A. Costa" src="/GCTC/uploads/2017/07/11/photo_rui_costa.png"><h3>Rui A. Costa</h3><p>CEO, Ubiwhere</p> </div>
 	<div class="inlineBlock"><img alt="Mathieu Carlier" src="/GCTC/uploads/2017/07/11/photo_mathieu_carlier.jpg"><h3>Mathieu Carlier</h3><p>CEO, Everimpact</p> </div>
@@ -414,8 +414,9 @@
 	<div class="inlineBlock"><img alt="Antonio Jara" src="/GCTC/uploads/2017/07/11/photo_antonio_jara.png"><h3>Antonio Jara</h3><p>CEO, HOP Ubiquitous</p> </div>
 	<div class="inlineBlock"><img alt="Andrea Cruciani" src="/GCTC/uploads/2017/07/11/photo_andrea_cruciani.jpg"><h3>Andrea Cruciani</h3><p>CEO, TeamDev</p> </div>
 	<div class="inlineBlock"><img alt="Lanfranco Marasso" src="/GCTC/uploads/2017/07/11/marasso.jpg"><h3>Lanfranco Marasso</h3><p>Smart City Program Director, Engineering Ingegneria Informatica S.p.A</p> </div>
+	<div class="inlineBlock"><img alt="Derek Loftis" src="/GCTC/uploads/2017/07/11/DrDerekLoftisPhoto.png"><h3>Derek Loftis</h3><p>Assistant Research Scientist, Virginia Institute of Marine Science</p> </div>
 	<div class="inlineBlock"><img alt="Joshua Tan" src="/GCTC/uploads/2017/07/11/tan.jpg"><h3>Joshua Tan</h3><p>Researcher, Oxford University</p> </div>
-	<div class="inlineBlock"><img alt="Christine Kendrick" src="/GCTC/uploads/2017/07/11/kendrick.jpg"><h3>Christine Kendrick</h3><p>Smart Cities Project Manager, Portland, OR</p> </div>
+	<div class="inlineBlock"><img alt="Christine Kendrick" src="/GCTC/uploads/2017/07/11/kendrick.jpg"><h3>Christine Kendrick</h3><p>Smart Cities Project Manager, City of Portland, OR</p> </div>
 
 	
 	<!--
