--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -404,7 +404,7 @@
 	
 	<div class="inlineBlock"><img alt="Nick Maynard" src="/GCTC/uploads/2017/07/11/NickMaynard.jpg"><h3>Nick Maynard</h3><p>Co-founder and Chief Strategy Officer, US-Ignite</p> </div>
 	<div class="inlineBlock"><img alt="Bill Maguire" src="/GCTC/uploads/2017/07/11/BillMaguireLinkedInwhitebackground.jpg"><h3>Bill Maguire</h3><p>Program Manager/Consultant, US-Ignite</p> </div>
-	<div class="inlineBlock"><img alt="Grant Ervin" src="/GCTC/uploads/2017/07/11/Grant_picture_03.jpg"><h3>Grant Ervin</h3><p>Chief Resilince Officer, City of Pittsburgh, PA</p> </div>
+	<div class="inlineBlock"><img alt="Grant Ervin" src="/GCTC/uploads/2017/07/11/Grant_picture_03.jpg"><h3>Grant Ervin</h3><p>Chief Resilience Officer, City of Pittsburgh, PA</p> </div>
 	<div class="inlineBlock"><img alt="Darrin Jenkins" src="/GCTC/uploads/2017/07/11/DarrinJenkinsphoto.jpg"><h3>Darrin Jenkins</h3><p>City Manager, City of Rohnert Park, CA</p> </div>
 	<div class="inlineBlock"><img alt="Dan Hoffman" src="/GCTC/uploads/2017/07/11/hoffman.jpg"><h3>Dan Hoffman</h3><p>Assistant City Manager, City of Gainesville, FL</p> </div>
 	<div class="inlineBlock"><img alt="Jorge Alfonso Kurano" src="/GCTC/uploads/2017/07/11/JorgeAlfonsoKurano.jpg"><h3>Jorge Alfonso Kurano</h3><p>Project Manager, Universidad Politecnica de Madrid</p> </div>
