--- a/super-clusters/index.html
+++ b/super-clusters/index.html
@@ -306,7 +306,7 @@
 <p>San Mateo County CA, City of San Leandro CA, City of Schenectady NY, Joint Venture Silicon Valley, Ruckus Wireless, Sensity/Verizon, Smart Connections LLC, Oku Solutions LLC, National Telecommunications and Information Administration</p>
 
 <hr>
-<h3>Contact info for the SuperCluster chairs can be found <a href="https://docs.google.com/spreadsheets/d/1a697VZZElvLgYISq0ukHhLsK556HQPcdIt_IG6gTPfM/edit?usp=sharing">here</a>.></h3>
+<h3>Contact info for the SuperCluster chairs can be found <a href="https://docs.google.com/spreadsheets/d/1a697VZZElvLgYISq0ukHhLsK556HQPcdIt_IG6gTPfM/edit?usp=sharing">here</a>.</h3>
 
                         </div>
 
