new agenda and files

--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -368,8 +368,8 @@
         <p>CEO, Urban Systems</p>       
     </div> 
 	<div class="inlineBlock">
-        <img alt="Skip Newbery" src="/GCTC/uploads/2017/04/19/skip_newberry.jpeg">     
-        <h3>Skip Newbery</h3>
+        <img alt="Skip Newberry" src="/GCTC/uploads/2017/04/19/skip_newberry.jpeg">     
+        <h3>Skip Newberry</h3>
         <p>President and CEO, Technology Associates of Oregon</p>       
     </div>
 	<div class="inlineBlock">
