new agenda and files

--- a/event/gctc-expo-2017/agenda/index.html
+++ b/event/gctc-expo-2017/agenda/index.html
@@ -250,7 +250,7 @@
                         <div>
                           <p>
 						  <a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><img src="/GCTC/images/agenda/GCTC Expo Agenda_Page_01" alt="Page one of the agenda" /><br><img src="/GCTC/images/agenda/GCTC Expo Agenda_Page_02" alt="Page two of the agenda" /></a></p>
-						  
+						  <p><a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</a></p>
                         </div>
 
                     </div>
