new agenda and files

--- a/event/gctc-expo-2017/agenda/index.html
+++ b/event/gctc-expo-2017/agenda/index.html
@@ -249,7 +249,11 @@
 						<div><a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download the Agenda</strong></a> </div>
                         <div>
                           <p>
-						  <a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><img src="/GCTC/images/agenda/GCTC Expo Agenda_Page_01" alt="Page one of the agenda" /><br><img src="/GCTC/images/agenda/GCTC Expo Agenda_Page_02" alt="Page two of the agenda" /></a></p>
+						  <a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank">
+						  <img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_01.jpg" alt="Page one of the agenda" />
+						  <br>
+						  <img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_02.jpg" alt="Page two of the agenda" /></a>
+						  </p>
 						  <p><a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</a></p>
                         </div>
 
