--- a/event/gctc-expo-2017/agenda/index.html
+++ b/event/gctc-expo-2017/agenda/index.html
@@ -254,7 +254,7 @@
 						  <br>
 						  <img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_02.jpg" alt="Page two of the agenda" /></a>
 						  </p>
-						  <p><a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</a></p>
+							<p><a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</strong></a></p>
                         </div>
 
                     </div>
