Change to button

--- a/event/gctc-expo-2017/agenda/index.html
+++ b/event/gctc-expo-2017/agenda/index.html
@@ -246,7 +246,7 @@
                 <div class="row">
 
                     <div class="col-md-12">
-						<div><a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download the Agenda</strong></a> </div>
+						<div><a class="customBtn2" href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</strong></a> <br><br></div>
                         <div>
                           <p>
 						  <a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank">
@@ -254,7 +254,7 @@
 						  <br>
 						  <img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_02.jpg" alt="Page two of the agenda" /></a>
 						  </p>
-							<p><a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</strong></a></p>
+							<p><a class="customBtn2" href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</strong></a></p>
                         </div>
 
                     </div>
