--- a/event/gctc-expo-2017/agenda/index.html
+++ b/event/gctc-expo-2017/agenda/index.html
@@ -249,10 +249,21 @@
 						<div><a class="customBtn2" href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</strong></a> <br><br></div>
                         <div>
                           <p>
-						  <a href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank">
-						  <img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_01.jpg" alt="Page one of the agenda" />
-						  <br>
-						  <img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_02.jpg" alt="Page two of the agenda" /></a>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_01.png" alt="Page 1 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_02.png" alt="Page 2 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_03.png" alt="Page 3 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_04.png" alt="Page 4 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_05.png" alt="Page 5 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_06.png" alt="Page 6 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_07.png" alt="Page 7 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_08.png" alt="Page 8 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_09.png" alt="Page 9 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_10.png" alt="Page 10 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_11.png" alt="Page 11 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_12.png" alt="Page 12 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_13.png" alt="Page 13 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_14.png" alt="Page 14 of the agenda" /><br>
+							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_15.png" alt="Page 15 of the agenda" />
 						  </p>
 							<p><a class="customBtn2" href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</strong></a></p>
                         </div>
