--- a/event/gctc-expo-2017/agenda/index.html
+++ b/event/gctc-expo-2017/agenda/index.html
@@ -246,7 +246,7 @@
                 <div class="row">
 
                     <div class="col-md-12">
-						<div><a class="customBtn2" href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</strong></a> <br><br></div>
+						<div><a class="customBtn2" href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda and Search for Keywords Here</strong></a> <br><br></div>
                         <div>
                           <p>
 							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_01.png" alt="Page 1 of the agenda" /><br>
@@ -265,7 +265,7 @@
 							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_14.png" alt="Page 14 of the agenda" /><br>
 							<img src="/GCTC/images/agenda/GCTCExpoAgenda_Page_15.png" alt="Page 15 of the agenda" />
 						  </p>
-							<p><a class="customBtn2" href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda Here</strong></a></p>
+							<p><a class="customBtn2" href="/GCTC/uploads/GCTC-Expo-Agenda.pdf" target="_blank"><strong>Download Full Agenda and Search for Keywords Here</strong></a></p>
                         </div>
 
                     </div>
