new speakers added

--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -270,7 +270,7 @@
     </div>
 	-->
 	
-<div class="inlineBlock"><img alt="Pauline Cutter" src="/GCTC/uploads/2017/07/11/01-PaulineCutter-crop.jpg"><h3>Pauline Cutter</h3><p>Mayor, City of San Leandro, California</p></div>
+<div class="inlineBlock"><img alt="Catherine Pugh" src="/GCTC/uploads/2017/07/11/pugh_275.png"><h3>Catherine Pugh</h3><p>Mayor, City of Baltimore, MD</p> </div>
 <div class="inlineBlock"><img alt="Roy D. Buol" src="/GCTC/uploads/2017/07/11/MayorRoyBuolHi-Res_LG.jpg"><h3>Roy D. Buol</h3><p>Mayor, City of Dubuque, IA</p></div>
 <div class="inlineBlock"><img alt="Acquanetta Warren" src="/GCTC/uploads/2017/07/11/05-AcquanettaWarren-crop.jpg"><h3>Acquanetta Warren</h3><p>Mayor, City of Fontana, California</p></div>
 <div class="inlineBlock"><img alt="Gary McCarthy" src="/GCTC/uploads/2017/07/11/03-GaryMcCarthy-crop.jpg"><h3>Gary McCarthy</h3><p>Mayor, City of Schenectady, New York</p></div>
@@ -289,10 +289,10 @@
 <div class="inlineBlock"><img alt="Meghan Houghton" src="/GCTC/uploads/2017/07/11/houghton.jpg"><h3>Meghan Houghton </h3><p>Staff Associate, National Science Foundation</p></div>
 <div class="inlineBlock"><img alt="Hideyuki Tokuda" src="/GCTC/uploads/2017/07/11/HideyukiTokudaNICTPresident974x8050.jpg"><h3>Hideyuki Tokuda</h3><p>President, National Institute of Information and Communications Technology, Japan</p></div>
 <div class="inlineBlock"><img alt="Ming-Teh Wang" src="/GCTC/uploads/2017/07/11/TaoyuanDeputyMayorWangPhoto.jpg"><h3>Ming-Teh Wang</h3><p>Deputy Mayor, City of Taoyuan, Taiwan </p></div>
-<div class="inlineBlock"><img alt="Michael C.Y. Chang" src="/GCTC/uploads/2017/07/11/"><h3>Michael C.Y. Chang</h3><p>Deputy Mayor, City of Tainan, Taiwan</p> </div>
+<div class="inlineBlock"><img alt="Michael C.Y. Chang" src="/GCTC/uploads/2017/07/11/placeholder.png"><h3>Michael C.Y. Chang</h3><p>Deputy Mayor, City of Tainan, Taiwan</p> </div>
 <div class="inlineBlock"><img alt="David McCann" src="/GCTC/uploads/2017/07/11/Dave_McCann_Amazon.jpg"><h3>David McCann</h3><p>VP, AWS Marketplace, Amazon</p> </div>
 <div class="inlineBlock"><img alt="Kreg Christoff" src="/GCTC/uploads/2017/07/11/Kreg_Christoff.jpg"><h3>Kreg Christoff</h3><p>VP, Utility Sales, Motorola Solutions</p> </div>
-<div class="inlineBlock"><img alt="Sean Harrington" src="/GCTC/uploads/2017/07/11/"><h3>Sean Harrington</h3><p>VP, City Solutions, Verizon</p> </div>
+<div class="inlineBlock"><img alt="Sean Harrington" src="/GCTC/uploads/2017/07/11/Sean_Harrington-Sensity-Verizon.jpg"><h3>Sean Harrington</h3><p>VP, City Solutions, Verizon</p> </div>
 <div class="inlineBlock"><img alt="Archana Vemulapalli" src="/GCTC/uploads/2017/07/11/Archana-Headshot-2017.jpg"><h3>Archana Vemulapalli</h3><p>CTO, Washington DC</p></div>
 <div class="inlineBlock"><img alt="Bob Bennett" src="/GCTC/uploads/2017/04/19/Bob%20Bennett%203-1.jpg"><h3>Bob Bennett</h3><p>Chief Innovation Officer, City of Kansas City, MO</p>        </div>
 <div class="inlineBlock"><img alt="Wilfred_Pinfold" src="/GCTC/uploads/2017/04/19/Wilfred_Pinfold.png"><h3>Wilfred Pinfold</h3><p>CEO, Urban Systems</p></div> 
@@ -337,7 +337,7 @@
 <div class="inlineBlock"><img alt="Cecilia Feeley" src="/GCTC/uploads/2017/07/11/CeciliaFeeley.jpg"><h3>Cecilia Feeley</h3><p>Autism Transportation Manager, Rutgers University</p> </div>
 <div class="inlineBlock"><img alt="Jason Simmons" src="/GCTC/uploads/2017/07/11/JasonSimmons.jpg"><h3>Jason Simmons</h3><p>Principal Planner, NJ Passaic County Department of Planning & Economic Development</p> </div>
 <div class="inlineBlock"><img alt="Zheng Yi Wu" src="/GCTC/uploads/2017/07/11/ZhengYiWu.jpg"><h3>Zheng Yi Wu</h3><p>Bentley Fellow, Bentley</p> </div>
-<div class="inlineBlock"><img alt="Stephanie Dock" src="/GCTC/uploads/2017/07/11/StephanieDock"><h3>Stephanie Dock</h3><p>Research Program Administrator, District Department of Transportation</p> </div>
+<div class="inlineBlock"><img alt="Stephanie Dock" src="/GCTC/uploads/2017/07/11/StephanieDock.jpg"><h3>Stephanie Dock</h3><p>Research Program Administrator, District Department of Transportation</p> </div>
 <div class="inlineBlock"><img alt="Masugi Inoue" src="/GCTC/uploads/2017/07/11/MasugiInoue.jpg"><h3>Masugi Inoue</h3><p>Director, International Research Advancement Office, NICT (Japan)</p> </div>
 <div class="inlineBlock"><img alt="Rusty Lacy" src="/GCTC/uploads/2017/07/11/RustyLacy.jpg"><h3>Rusty Lacy</h3><p>Information Technology Manager, Nashville Fire Department</p> </div>
 <div class="inlineBlock"><img alt="Eugene vorobeychik" src="/GCTC/uploads/2017/07/11/EugeneVorobeychik.jpg"><h3>Eugene vorobeychik</h3><p>Assistant Professor, Vanderbilt University</p> </div>
@@ -369,7 +369,7 @@
 <div class="inlineBlock"><img alt="Jason Whittet" src="/GCTC/uploads/2017/07/11/JasonWhittet_Headshot.jpg"><h3>Jason Whittet</h3><p>Business Development Manager, AT&T</p> </div>
 <div class="inlineBlock"><img alt="Dennis Linders" src="/GCTC/uploads/2017/07/11/dennislinders.jpg"><h3>Dennis Linders</h3><p>Data and Performance Analyst (Service Delivery and Innovation), Office of the Montgomery County Executive (MD)</p> </div>
 <div class="inlineBlock"><img alt="Michael Ohlsen" src="/GCTC/uploads/2017/07/11/MichaelOhlsen.jpg"><h3>Michael Ohlsen</h3><p>Energy Manager, City of Tallahassee</p> </div>
-<div class="inlineBlock"><img alt="Ayberk Kocatepe" src="/GCTC/uploads/2017/07/11/AyberkKocatepe"><h3>Ayberk Kocatepe</h3><p>Graduate Assistant, Florida State University</p> </div>
+<div class="inlineBlock"><img alt="Ayberk Kocatepe" src="/GCTC/uploads/2017/07/11/AyberkKocatepe.jpg"><h3>Ayberk Kocatepe</h3><p>Graduate Assistant, Florida State University</p> </div>
 <div class="inlineBlock"><img alt="Dan Correa" src="/GCTC/uploads/2017/07/11/DanCorrea.jpg"><h3>Dan Correa</h3><p>, </p> </div>
 <div class="inlineBlock"><img alt="Isa Reeb" src="/GCTC/uploads/2017/07/11/IsaReeb.jpg"><h3>Isa Reeb</h3><p>Urban Designer, Civitas</p> </div>
 <div class="inlineBlock"><img alt="Jill Sorensen" src="/GCTC/uploads/2017/07/11/JillSorensen.jpg"><h3>Jill Sorensen</h3><p>Director, BEVI, Baltimore City, BGE, West Baltimore</p> </div>
