new speakers added

--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -289,7 +289,7 @@
 <div class="inlineBlock"><img alt="Meghan Houghton" src="/GCTC/uploads/2017/07/11/houghton.jpg"><h3>Meghan Houghton </h3><p>Staff Associate, National Science Foundation</p></div>
 <div class="inlineBlock"><img alt="Hideyuki Tokuda" src="/GCTC/uploads/2017/07/11/HideyukiTokudaNICTPresident974x8050.jpg"><h3>Hideyuki Tokuda</h3><p>President, National Institute of Information and Communications Technology, Japan</p></div>
 <div class="inlineBlock"><img alt="Ming-Teh Wang" src="/GCTC/uploads/2017/07/11/TaoyuanDeputyMayorWangPhoto.jpg"><h3>Ming-Teh Wang</h3><p>Deputy Mayor, City of Taoyuan, Taiwan </p></div>
-<div class="inlineBlock"><img alt="Michael C.Y. Chang" src="/GCTC/uploads/2017/07/11/placeholder.png"><h3>Michael C.Y. Chang</h3><p>Deputy Mayor, City of Tainan, Taiwan</p> </div>
+<div class="inlineBlock"><img alt="Michael C.Y. Chang" src="/GCTC/uploads/2017/07/11/MichaelCYChang.jpg"><h3>Michael C.Y. Chang</h3><p>Deputy Mayor, City of Tainan, Taiwan</p> </div>
 <div class="inlineBlock"><img alt="David McCann" src="/GCTC/uploads/2017/07/11/Dave_McCann_Amazon.jpg"><h3>David McCann</h3><p>VP, AWS Marketplace, Amazon</p> </div>
 <div class="inlineBlock"><img alt="Kreg Christoff" src="/GCTC/uploads/2017/07/11/Kreg_Christoff.jpg"><h3>Kreg Christoff</h3><p>VP, Utility Sales, Motorola Solutions</p> </div>
 <div class="inlineBlock"><img alt="Sean Harrington" src="/GCTC/uploads/2017/07/11/Sean_Harrington-Sensity-Verizon.jpg"><h3>Sean Harrington</h3><p>VP, City Solutions, Verizon</p> </div>
@@ -330,7 +330,7 @@
 <div class="inlineBlock"><img alt="Derek Loftis" src="/GCTC/uploads/2017/07/11/DrDerekLoftisPhoto.png"><h3>Derek Loftis</h3><p>Assistant Research Scientist, Virginia Institute of Marine Science</p> </div>
 <div class="inlineBlock"><img alt="Sridhar Katragadda" src="/GCTC/uploads/2017/07/11/SridharKatragadda.jpg"><h3>Sridhar Katragadda</h3><p>Systems Analyst, City Of Virginia Beach, VA</p> </div>
 <div class="inlineBlock"><img alt="Joshua Tan" src="/GCTC/uploads/2017/07/11/tan.jpg"><h3>Joshua Tan</h3><p>Researcher, Oxford University</p> </div>
-<div class="inlineBlock"><img alt="Christine Kendrick" src="/GCTC/uploads/2017/07/11/kendrick.jpg"><h3>Christine Kendrick</h3><p>Air Quality Lead/Smart Cities Project Manager, City of Portland, OR</p> </div>
+<div class="inlineBlock"><img alt="Christine Kendrick" src="/GCTC/uploads/2017/07/11/Christine_Kendrick.jpg"><h3>Christine Kendrick</h3><p>Air Quality Lead/Smart Cities Project Manager, City of Portland, OR</p> </div>
 <div class="inlineBlock"><img alt="Robert Wack" src="/GCTC/uploads/2017/07/11/RobertWackheadshothireslarge.jpg"><h3>Robert Wack</h3><p>President, MAGIC Inc.</p> </div>
 <div class="inlineBlock"><img alt="Zhigang Zhu" src="/GCTC/uploads/2017/07/11/ZhigangZhu.jpg"><h3>Zhigang Zhu</h3><p>Professor, The CUNY City College</p> </div>
 <div class="inlineBlock"><img alt="Jie Gong" src="/GCTC/uploads/2017/07/11/JieGong.jpg"><h3>Jie Gong</h3><p>Assistant Professor, Rutgers University</p> </div>
