--- a/event/gctc-expo-2017/speakers/index.html
+++ b/event/gctc-expo-2017/speakers/index.html
@@ -340,7 +340,7 @@
 <div class="inlineBlock"><img alt="Stephanie Dock" src="/GCTC/uploads/2017/07/11/StephanieDock.jpg"><h3>Stephanie Dock</h3><p>Research Program Administrator, District Department of Transportation</p> </div>
 <div class="inlineBlock"><img alt="Masugi Inoue" src="/GCTC/uploads/2017/07/11/MasugiInoue.jpg"><h3>Masugi Inoue</h3><p>Director, International Research Advancement Office, NICT (Japan)</p> </div>
 <div class="inlineBlock"><img alt="Rusty Lacy" src="/GCTC/uploads/2017/07/11/RustyLacy.jpg"><h3>Rusty Lacy</h3><p>Information Technology Manager, Nashville Fire Department</p> </div>
-<div class="inlineBlock"><img alt="Eugene vorobeychik" src="/GCTC/uploads/2017/07/11/EugeneVorobeychik.jpg"><h3>Eugene vorobeychik</h3><p>Assistant Professor, Vanderbilt University</p> </div>
+<div class="inlineBlock"><img alt="Eugene vorobeychik" src="/GCTC/uploads/2017/07/11/EugeneVorobeychik.jpg"><h3>Eugene Vorobeychik</h3><p>Assistant Professor, Vanderbilt University</p> </div>
 <div class="inlineBlock"><img alt="Gautam Biswas" src="/GCTC/uploads/2017/07/11/Gautambiswas.jpg"><h3>Gautam Biswas</h3><p>Professor, Vanderbilt University</p> </div>
 <div class="inlineBlock"><img alt="Abhishek Dubey" src="/GCTC/uploads/2017/07/11/Dubey_Abhishek1.jpg"><h3>Abhishek Dubey</h3><p>Assistant Professor, Vanderbilt University</p> </div>
 <div class="inlineBlock"><img alt="Jude Willcher" src="/GCTC/uploads/2017/07/11/JudeWillcher.jpg"><h3>Jude Willcher</h3><p>Strategic Advisor, Seattle Department of Transportation</p> </div>
