pass url parameter to filter datatable

--- a/event/gctc-expo-2017/exhibit/index.html
+++ b/event/gctc-expo-2017/exhibit/index.html
@@ -9,7 +9,7 @@
 
   <title>exhibits</title>
   
-  <base href="https://boryyytoe.github.io/GCTC/">
+  <!-- <base href="https://boryyytoe.github.io/GCTC/">-->
 
   <meta name="author" content="" />
   <meta name="keywords" content="">
@@ -463,8 +463,8 @@
 		{{/each}}
 		</script> 
 	
-	<!-- <script src="/GCTC/js/datatable-tabletop-load-exhibits.js"></script>-->
-	<script src="file://eng-prd-file01/home/CButh/1GithubSites/GCTC/js/datatable-tabletop-load-exhibits.js"></script>
+	<script src="/GCTC/js/datatable-tabletop-load-exhibits.js"></script>
+	<!--<script src="file://eng-prd-file01/home/CButh/1GithubSites/GCTC/js/datatable-tabletop-load-exhibits.js"></script> -->
 	<script type="text/javascript">
 
 Handlebars.registerHelper('cleanConcat', function() {
